--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 .first-section{
     display: flex;
 }
-.half-width{
+.first-half-width{
     width: 50%;
     padding-left: 6%;
     padding-top: 2%;
 
 }
-.half-width img{
-    width: 90%;
+.first-half-width img{
+    width: 85%;
     padding-bottom: 50px;
 
 }
@@ -24,9 +24,9 @@ h1{
     font-weight: 900;
 }
 p{
-    font-size: 40px;
+    font-size: 30px;
 }
-.order-food-link{
+.link-button{
     text-decoration: none;
     background-image: linear-gradient(orange, tomato);
     padding: 15px 40px;
@@ -34,3 +34,58 @@ p{
     font-weight: 700;
     border-radius: 20px;
 }
+.second-section{
+    display: flex;
+    background-image: url(images/shapes/7.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+.second-half-width{
+    width: 70%;
+}
+.second-half-width{
+    padding-left: 180px;
+    padding-right: 200px;
+    padding-bottom: 100px;
+}
+.second-half-width img{
+    width: 104.5%;
+}
+.third-division{
+    text-align: center;
+    padding-left: 500px;
+    padding-right: 500px;
+}
+.third-section{
+    display: flex;
+}
+.third-recipie-divison{
+    width: 33.33%;
+    margin-right: 40px;
+    margin: 60px;
+    margin-right: 1%;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 20px;
+    border-radius: 30px;
+    box-shadow: 10px 10px 40px gray;
+}
+.third-recipie-divison h1{
+    font-size: 50px;
+    font-weight: 700;
+}
+.fourth-section{
+    display: flex;
+}
+.fifth-section{
+    text-align: center;
+    background-color: black;
+}
+.fifth-section p{
+    color: white;
+}
+.fifth-section .finally{
+    color: grey;
+
+}
+
